<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_50"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textViewResult"
        tools:text="89"
        android:textSize="48sp"
        android:padding="16dp"
        android:layout_marginTop="18dp"
        android:background="@color/orange_100"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewResult"
        app:layout_constraintStart_toStartOf="@id/textViewResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textViewResult"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:rowCount="5"
        app:columnCount="4"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/buttonClear"
            style="@style/Button"
            android:text="@string/buttonClear"
            android:tag="C"

            />
        <Button
            android:id="@+id/buttonPercent"
            style="@style/Button"
            android:text="@string/buttonPercent"
            android:tag="%"
            />
        <Button
            android:id="@+id/buttonBackSpace"
            style="@style/Button"
            android:text="@string/buttonBackSpace"
            android:tag="BS"
            />
        <Button
            android:id="@+id/buttonDivide"
            style="@style/Button"
            android:text="@string/buttonDivide"
            android:tag="/"
            />
        <Button
            android:id="@+id/button7"
            style="@style/Button"
            android:text="@string/button7"
            android:tag="7"
            />
        <Button
            android:id="@+id/button8"
            style="@style/Button"
            android:text="@string/button8"
            android:tag="8"
            />
        <Button
            android:id="@+id/button9"
            style="@style/Button"
            android:text="@string/button9"
            android:tag="9"
            />
        <Button
            android:id="@+id/buttonMultiply"
            style="@style/Button"
            android:text="@string/buttonMultiply"
            android:tag="*"
            />
        <Button
            android:id="@+id/button4"
            style="@style/Button"
            android:text="@string/button4"
            android:tag="4"
            />
        <Button
            android:id="@+id/button5"
            style="@style/Button"
            android:text="@string/button5"
            android:tag="5"
            />
        <Button
            android:id="@+id/button6"
            style="@style/Button"
            android:text="@string/button6"
            android:tag="6"
            />
        <Button
            android:id="@+id/buttonMinus"
            style="@style/Button"
            android:text="@string/buttonMinus"
            android:tag="-"
            />
        <Button
            android:id="@+id/button1"
            style="@style/Button"
            android:text="@string/button1"
            android:tag="1"
            />
        <Button
            android:id="@+id/button2"
            style="@style/Button"
            android:text="@string/button2"
            android:tag="2"
            />
        <Button
            android:id="@+id/button3"
            style="@style/Button"
            android:text="@string/button3"
            android:tag="3"
            />
        <Button
            android:id="@+id/buttonPlus"
            style="@style/Button"
            android:text="@string/buttonPlus"
            android:tag="+"
            />
        <Button
            android:id="@+id/button00"
            style="@style/Button"
            android:text="@string/button00"
            android:tag="00"
            />
        <Button
            android:id="@+id/button0"
            style="@style/Button"
            android:text="@string/button0"
            android:tag="0"
            />
        <Button
            android:id="@+id/buttonDot"
            style="@style/Button"
            android:text="@string/buttonDot"
            android:tag="."
            />
        <Button
            android:id="@+id/buttonEquals"
            style="@style/Button"
            android:text="@string/buttonEquals"
            android:tag="="
            />
    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>